Bug 140508 - Filesave DOC: Non-square shape with border frame has wrap wrong applied (3 regressions)
Summary: Filesave DOC: Non-square shape with border frame has wrap wrong applied (3 re...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, filter:doc, regression
Depends on:
Blocks: DOC-Anchor-and-Text-Wrap
  Show dependency treegraph
 
Reported: 2021-02-18 14:51 UTC by Timur
Modified: 2023-05-30 19:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2021-02-18 14:51:25 UTC
This is DOC bug for DOCX resolved in bug 136059.
Open sample ODT attachment 167020 [details], save as DOC and reopen in LO and MSO. 
It looked like attachment 167021 [details] before Docx fix, but can be used for DOC. 
Open in MSO is better than in LO, so this may be fileopen bug.
Comment 1 Timur 2021-02-18 15:00:43 UTC Comment hidden (obsolete)
Comment 2 Timur 2021-02-19 09:58:19 UTC
This document saved as DOC was good in OO, multiple regressions. 
Bisected are from Mikos so I add to CC, please see all this:



I 2nd page Paralel wrap becomes wrong
Linux 4.4
commit 612c411072ede9debf0ceafc3aef125b930b3762
Date:   Sat Mar 14 22:29:35 2015 +0800
    source-hash-3350fabd23859eb5fdbe77c6db9248866d4e2995
    previous source-hash-3d399b0e45720354fc64dc3d121ee486e01eff89
    Author:     Miklos Vajna <vmiklos@collabora.co.uk>
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=3d399b0e45720354fc64dc3d121ee486e01eff89..3350fabd23859eb5fdbe77c6db9248866d4e2995
SwXAutoStyle::GetPropertyValues_Impl: fix handling of CharAutoStyleName

II 1sp page Left and Right wrap become wrong
Linux 6.4
commit 8ce4782b86611dd481f89e4bffac61036cc7428e
Date:   Tue Jul 30 09:00:49 2019 +0200
    source 90928f23994d8fc1d9cc7edf95880782c8ca712a
    previous source 736f65e53b966774f2d72e6f2479fd335986f5a6
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=736f65e53b966774f2d72e6f2479fd335986f5a6..90928f23994d8fc1d9cc7edf95880782c8ca712a
author Miklos Vajna <vmiklos@collabora.com>
2019-07-29 20:49:21 +0200 
tdf#112535 DOC import: fix handling the have contour but no polygon case


III original ODT is 2 pages, but saved DOC is not exactly like that, because content from 1st page goes to 2nd page. OO was fine, so that's 3rd regression.

There were more changes in the meantime. 43 oldest was all messed up, later it was fixed in this range and 1sp page here remains 1 page:
Linux 4.3all:
commit e65850d4d23beb93ded3cab9e5945dd39c530738
Date:   Wed Dec 7 05:16:40 2011 +0100
    source-hash-a44dda4b7d71f8d2b4e0cca79d732eab89588c3a
    previous source-hash-886762160996dfa3fee07cf135e53dfe952ed298
https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=886762160996dfa3fee07cf135e53dfe952ed298..a44dda4b7d71f8d2b4e0cca79d732eab89588c3a

But immediatelly in the next commit range 1 page goes to 2 - too many source commits for me to see the culprit for this 3rd regression:
commit f89e78929fb81d824ac5ad2b3063a7f73ed47c9a
Date:   Wed Dec 7 12:43:15 2011 +0100
    source-hash-a705aec5117fe9123236ebdeb0d6f271b83f8af4
    previous source-hash-a44dda4b7d71f8d2b4e0cca79d732eab89588c3a
    https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=a44dda4b7d71f8d2b4e0cca79d732eab89588c3a..a705aec5117fe9123236ebdeb0d6f271b83f8af4
Comment 3 Dieter 2021-03-06 06:14:27 UTC
I confirm it with

Version: 7.1.1.2 (x64) / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 4 Timur 2021-05-17 11:26:32 UTC
*** Bug 142284 has been marked as a duplicate of this bug. ***
Comment 5 Commit Notification 2023-05-30 19:34:19 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0ceb131e964206efbb1c76a03f19d1992e2f89c7

tdf#140508 doc import: auto-contour for textboxes

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Justin L 2023-05-30 19:48:36 UTC
Problem 1: a strange-ish problem. I expect the problem described is the parallel textbox all alone on its own third page. 
I could NOT reproduce that just doing imports on a recently round-tripped file.
However, I could reproduce it when exporting and importing.

Problem 1 was fixed in the unlikely sounding 7.0
commit 568b820bc2d52c007ee08ad7a3849c94a458115d
Author: Noel Grandin on Tue Dec 17 15:11:34 2019 +0200
    tdf#119227 fix freeze when copying a large bulleted list
(although as a layout fix, it suddenly makes a bit of sense.)


Problem two is fixed with comment 5.


Problem three we just ignore. It is too TWIP-precise dependent.