tdf#140508 doc import: auto-contour for textboxes

This fixes a 6.3.1 regression.

The problem was that contour was turned off
despite settings indicating that it should be on.

An earlier patchset contains the results of a make sw.check assert.

make CppunitTest_sw_ww8export3 CPPUNIT_TEST_NAME=testTdf79186_noLayoutInCell

Change-Id: Ib3df022a1430649b271083f343b470798f4a08c0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152398
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins